<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableRow>
        <TextView
            android:id="@+id/labelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeLabel"
            android:padding="5dip"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/valueType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsType"
            android:padding="5dip"
            android:textSize="16sp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromLabel"
            android:padding="5dip"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/valueLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textSize="16sp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/labelRecieved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receivedLabel"
            android:padding="5dip"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/valueRecieved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textSize="16sp"/>
    </TableRow>
</TableLayout>