<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/wrapper">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <AutoCompleteTextView
            android:id="@+id/phoneNumber"
            android:inputType="text"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/composeNewHint"
            />
        <ImageView
                android:id="@+id/addContactList"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@android:drawable/ic_menu_add"
                android:contentDescription="@string/addContact"
                android:onClick="showContactList"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.androidproductions.ics.sms.views.SmsEditText
            android:id="@+id/text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight=".8"/>
        <RelativeLayout
                android:id="@+id/sendingBox"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight=".15"
                android:onClick="sendSms"
                android:background="@drawable/button_selector"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="?attr/primary_sms_color"/>
            <ImageView
                    android:id="@+id/sendText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@android:drawable/ic_menu_send"
                    android:layout_above="@id/textCount"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/sendSms"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>