<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wrapper">
	<RelativeLayout
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        >
	    <QuickContactBadge
	        android:id="@+id/sender_photo"
	        android:layout_width="65dip"
	        android:layout_height="65dip"
	        android:src="@drawable/ic_contact_picture"
	        android:contentDescription="@string/contactPhoto"
	        android:layout_marginLeft="5dip"
	        android:layout_marginBottom="5dip"
	        android:layout_marginTop="5dip"/>
		<RelativeLayout
	        android:id="@+id/headerText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_toRightOf="@id/sender_photo"
	        android:layout_margin="5dip" >
		    <TextView
		        android:id="@+id/sender"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textColor="?attr/primary_sms_color"
		        android:textSize="18sp"
		        android:ellipsize="end"
		        android:singleLine="true"/>
		    <TextView
		        android:id="@+id/sender_number"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:textColor="?attr/secondary_sms_color"
		        android:textSize="14sp"
		        android:layout_below="@id/sender"/>
	        <TextView
		        android:id="@+id/messageTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:textColor="?attr/secondary_sms_color"
		        android:layout_below="@id/sender_number"/>
	        <ImageView
		       android:id="@+id/closeDialog"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:onClick="closeDialog"
		       android:src="@android:drawable/ic_menu_close_clear_cancel"
		       android:background="@drawable/button_selector"
	           android:layout_alignParentRight="true"
		       android:contentDescription="@string/openConvo"/>
   		</RelativeLayout>
   		<View
			android:background="@android:color/holo_blue_dark"
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:layout_below="@id/sender_photo"
			/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@id/head">
	    <ScrollView
	        android:layout_width="0dip"
	        android:layout_height="80dip"
	        android:layout_weight=".85"
	        android:id="@+id/scroller">
		    
		    <TextView
		        android:id="@+id/messageContent"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:autoLink="web"
		        android:paddingBottom="5dip"
		        android:textSize="16sp"
		        android:textColor="?attr/primary_sms_color"
		        android:layout_margin="5dip"/>
	    </ScrollView>
	    <ImageView
	       android:id="@+id/openConvo"
	       android:layout_width="0dip"
	       android:layout_height="40dip"
	       android:background="@drawable/button_selector"
	       android:layout_weight=".15"
	       android:onClick="openConversation"
	       android:src="@drawable/ic_go"
	       android:contentDescription="@string/openConvo"/>
    </LinearLayout>
    	    <TextView
	    	android:id="@+id/replyTo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="5dip"
	        android:textSize="16sp"
	        android:textColor="@android:color/holo_blue_dark"
	        android:layout_margin="5dip"
	        android:layout_below="@id/body"
	        android:visibility="gone"/>

	        <ImageView
	            android:id="@+id/previous"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@id/replyTo"
	            android:onClick="moveToPrevious"
	            android:src="@drawable/ic_menu_back"
            	android:background="@drawable/button_selector"
	            android:contentDescription="@string/sendSms"/>
	        <TextView
		    	android:id="@+id/count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/replyTo"
	            android:layout_centerHorizontal="true"
	            android:textSize="16sp"/>
	        <ImageView
	            android:id="@+id/next"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_below="@id/replyTo"
	            android:onClick="moveToNext"
	            android:src="@drawable/ic_menu_forward"
            	android:background="@drawable/button_selector"
	            android:contentDescription="@string/sendSms"/>

	            <!-- LinearLayout
        android:id="@+dialog/arrows"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:layout_below="@dialog/replyTo"
        android:gravity="center_vertical">
        <ImageView
	            android:id="@+dialog/previous"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight=".15"
	            android:onClick="moveToPrevious"
	            android:src="@drawable/ic_menu_back"
            	android:background="@drawable/menu_selector"
	            android:contentDescription="@string/sendSms"/>
		    <TextView
		    	android:id="@+dialog/count"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight=".70"
	            android:text="1 of 1"
	            android:textSize="18dip"/>
	        <ImageView
	            android:id="@+dialog/next"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight=".15"
	            android:onClick="moveToNext"
	            android:src="@drawable/ic_menu_forward"
            	android:background="@drawable/menu_selector"
	            android:contentDescription="@string/sendSms"/>
	    </LinearLayout-->
    <LinearLayout
        android:id="@+id/quickReply"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:layout_below="@id/next"
        android:gravity="center_vertical">
        
		    <com.androidproductions.ics.sms.views.SmsEditText
	            android:id="@+id/text"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight=".85"
	            android:textSize="16sp"/>
        <RelativeLayout
                android:id="@+id/sendingBox"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight=".15"
                android:onClick="sendSms"
                android:background="@drawable/button_selector"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="?attr/primary_sms_color"/>
            <ImageView
                    android:id="@+id/sendText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@android:drawable/ic_menu_send"

                    android:layout_above="@id/textCount"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/sendSms"/>


        </RelativeLayout>
	    </LinearLayout>
		<!-- Button
	        android:id="@+dialog/openConvo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@dialog/quickReply"
	        android:text="Open"
			android:onClick="openConversation"
	        android:textColor="#fff" />
		<Button
	        android:id="@+dialog/closeDialog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Close"
			android:onClick="closeDialog"
	        android:textColor="#fff"
	        android:layout_below="@dialog/quickReply"
	        android:layout_toRightOf="@dialog/openConvo" />
		<View
			android:background="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent"
			android:layout_height="2dp"
			android:layout_above="@dialog/openConvo"
			/-->
    
    

</RelativeLayout>